# CI-with-Jenkins-and-Docker-for-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  build.sh  build_full.sh  build_gtest_gmock.sh  init_build_windows.bat
jenkins/: Dockerfile  Jenkinsfile
project/: Workspace.cpp  Workspace.hpp  main.cpp
